2003-10-11  Niklas Knutsson  <nq@altern.org>

	* Update plot on add/modify/remove
	* Use only one gnuplot process/window and close it on exit
	* Fix crach on create new variable dialog
	* Delete the submenus, not the menu item, when updating
	* Do not update treeviews if not created
	* Save plot settings
	* Switch to enums for style and smoothing

2003-10-10  Niklas Knutsson  <nq@altern.org>

	* More plot stuff
	* Change step to steps
	* Make that the second tab page is realised
	* Save plot as postscript, eps, png, svg, fig or latex
	* Set a nicer font for gnuplot
	* Plot dialog: tabwidget, paired matrix, save
	* Plots: logscale, style, separate smoothing for each line, title, grid, color, linewidth, borders
	* Set timeout for wget and error on fail
	* Check if wget and gnuplot is available

2003-10-08  Niklas Knutsson  <nq@altern.org>

	* Plot dialog
	* Lots of plotting stuff
	* Hide on destroy and delete events for non-modal windows
	* Place terms with negative sign in the back when not using scientific sorting
	* Do not display more than one minus
	* Change compare() in Manager to sortCompare() and add real compare() function
	* Plot vector
	* Plotting with gnuplot
	* Fix crash with no argument definitions and variable number of arguments
	* Do not recreate currencies, just change the relation

2003-10-07  Niklas Knutsson  <nq@altern.org>

	* Fully enable builtin units
	* Do not print the same error message more than once
	* Fetch exchange rates from ECB
	* Fix crash by removing new line for alternative manager and gettextize the "or" while we are at it
	* Root functions non-abs
	* Fix argument check on alternative manager
	* Remove unnecessary gtk_main_iteration() as they create lots of problems
	* Do not unref wrong Manager in conversion in units dialog
	* Fix check of arguments in functions with unlimited number of arguments
	* Remove (again) prepended "1" for composite units
	* Fix prefixes

2003-10-06  Niklas Knutsson  <nq@altern.org>
